[package]
name = "ratatosk"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "0.4"
http-muncher = "0.2"
sha1 = "0.1"
rustc-serialize = "0.3"
bytes = "0.3"
log = "0.3"
mio = "0.5.0"
env_logger = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

